--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.1.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "ci-info": "^3.3.0",
+    "react": "17.0.2",
+    "react-native": "0.67.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
     "react-native-vector-icons": "^9.1.0",
-    "react": "17.0.2",
-    "react-native": "0.67.3"
+    "react-native-webview": "^11.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
