--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/datetimepicker": "^6.1.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
@@ -21,7 +22,7 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-webview": "^11.18.0"
+    "react-native-video": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
