--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-razorpay": "^2.2.9",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.12.0",
     "react-native-vector-icons": "^9.1.0",
